# flatter

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml
benchmark/svg/: render.yaml
src/: args.rs  main.rs  paths.rs  render.rs  yaml.rs
src/test/: mod.rs
src/test/data/bad_render_yaml/: render.yaml
src/test/data/has_render_yaml/: render.yaml
