[package]
name = "flatter"
description = "A command line utility for rendering PNGs from SVGs"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/cameron1024/flatter"
repository = "https://github.com/cameron1024/flatter"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["svg", "png", "render", "flutter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.15"
usvg = "0.15"
tiny-skia = "0.5"
indicatif = {version = "0.16", features = ["rayon"]}
rayon = "1.5"
structopt = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

flexi_logger = "0.18"
log = "0.4"
num_cpus = "1.13"

[profile.release]
lto = true